# tldr_bank

./: .custom_spoof_settings  .gitignore  .hide  README.md  bundle.sh  conftest.py  do.txt  exporter.py  landlord_payment.txt  license.MD  project_export.txt  pyproject.toml  setup_tldr_bank.sh  update_readme.sh  upgrade_tldr_bank.sh
src/tldr_bank/: keyword_manager.py  lock.py  main.py  processor.py  reporter.py  security.py  settings.py  transactions.py
tests/: sample.csv  test_hide.py  test_keyword_manager.py  test_lock.py  test_processor.py  test_reporter.py  test_security.py  test_settings.py  test_transactions.py
