[tool.poetry]
name = "tldr_bank"
version = "0.1.0"
description = "Spotify-wrapped-style analysis for your bank CSVs"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "tldr_bank", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.1"
filelock = "^3.24"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"

[tool.poetry.scripts]
tldr_bank = "tldr_bank.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
