[tool.poetry]
name = "tldr_bank"
version = "2.0.0"
description = "Terminal Bank Wrapped"
authors = ["You"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0"
rich = "^13.7"
plotext = "^5.2"
pyfiglet = "^1.0"
filelock = "^3.13"
rapidfuzz = "^3.14.3"

[tool.poetry.scripts]
tldr_bank = "tldr_bank.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]
